--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.0",
+    "autoprefixer": "^10.4.13",
+    "chart.js": "^4.1.1",
+    "date-fns": "^2.29.3",
     "next": "15.2.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "postcss": "^8.4.20",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "22.13.13",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "eslint": "9.23.0",
     "eslint-config-next": "15.2.4",
     "typescript": "5.8.2"
