--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
-    "eslint": "9.23.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.2.4",
     "typescript": "5.8.2"
   }
