--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.13",
     "chart.js": "^4.1.1",
     "date-fns": "^2.29.3",
+    "framer-motion": "^12.7.4",
     "next": "15.2.4",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
